2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Fix perl warning.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Set barcode in a reservation.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/rait.pm: Set chg in a reservation.

2013-06-27  Jean-Louis Martineau <martineau@zmanda.com>
	* config/amanda/progs.m4: Set LPRFLAG.

2013-06-26  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amflush.c, server-src/planner.c: Call holding_cleanup.
	* server-src/holding.c: ignore tmp file, add pid file in holding disk
	  to prevent parallel use.

2013-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amreport.pl: Fix send-amreport-on.

2013-06-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm: Always get a status initially.

2013-06-18  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Recovery/Planner.pm (make_plan): Use dump from the
	  changer if available.
	* server-src/amfetchdump.pl: Set the changer.

2013-06-17  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amflock.c, device-src/device.c, device-src/s3-device.c,
	  device-src/s3.c, perl/Amanda/Util.swg, server-src/tapefile.c:
	  Fix memory leak.

2013-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/dumper.c: Fail with good error message if the
	  dataport-list is empty.

2013-06-13  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/ndmp.pm: s/destiation/destination/
	* perl/Amanda/Changer/robot.pm: (eject) Return an error if the drive
	  is empty.

2013-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3.c: Call
	  curl_easy_setopt(hdl->curl, CURLOPT_NOSIGNAL, TRUE)))

2013-06-11  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/multi.pm (reset): Remove th slots hash.

2013-06-11  Jean-Louis Martineau <martineau@zmanda.com>